--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
     "@stream-io/flat-list-mvcp": "^0.10.3",
+    "@supabase/supabase-js": "^2.43.1",
     "expo": "^51.0.1",
     "expo-constants": "~16.0.1",
     "expo-file-system": "~17.0.1",
@@ -33,11 +35,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "stream-chat-expo": "^5.29.0",
     "stream-chat-react-native": "^5.29.0"
